; ModuleID = '/home/carl/AnghaBench/libuv/test/extr_test-pipe-getsockname.c_pipe_close_cb.c'
source_filename = "/home/carl/AnghaBench/libuv/test/extr_test-pipe-getsockname.c_pipe_close_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pipe_client = common dso_local global i32 0, align 4
@pipe_server = common dso_local global i32 0, align 4
@pipe_close_cb_called = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*)* @pipe_close_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @pipe_close_cb(i32* %0) #0 {
  %2 = alloca i32*, align 8
  store i32* %0, i32** %2, align 8
  %3 = load i32*, i32** %2, align 8
  %4 = icmp eq i32* %3, @pipe_client
  br i1 %4, label %8, label %5

5:                                                ; preds = %1
  %6 = load i32*, i32** %2, align 8
  %7 = icmp eq i32* %6, @pipe_server
  br label %8

8:                                                ; preds = %5, %1
  %9 = phi i1 [ true, %1 ], [ %7, %5 ]
  %10 = zext i1 %9 to i32
  %11 = call i32 @ASSERT(i32 %10)
  %12 = load i32, i32* @pipe_close_cb_called, align 4
  %13 = add nsw i32 %12, 1
  store i32 %13, i32* @pipe_close_cb_called, align 4
  ret void
}

declare dso_local i32 @ASSERT(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
